# olympus-update-

./: .gitignore  PORTING.md  README.md  RELEASE_0_1.md  install.sh
.github/workflows/: android-build.yml
android-app/: README.md  local.properties.example  settings.gradle.kts
android-app/app/: build.gradle.kts
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/cpp/: CMakeLists.txt  android_runtime.cpp  native-lib.cpp
android-app/app/src/main/java/com/helios3/launcher/: DriverRepository.kt  FirmwareRepository.kt  GameLibraryRepository.kt  MainActivity.kt  NativeBridge.kt  NativeRenderView.kt  SettingsRepository.kt  UpdateChecker.kt
android-app/app/src/main/java/com/olympus/launcher/: MainActivity.kt  NativeBridge.kt  NativeRenderView.kt  UpdateChecker.kt
android-app/app/src/main/res/drawable/: game_cover_placeholder.xml
android-app/app/src/main/res/layout/: activity_main.xml
android-app/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android-port-overlay/: README.md
scripts/: check-updates.sh  common.sh  doctor.sh  enable-gamepad.sh  launch-rpcs3.sh  start-session.sh  termux-rpcs3-arm64.sh
tools/: apply-rpcs3-android-port.sh  import-rpcs3.sh
